Adds intro text to index file

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -11,6 +11,7 @@
           color: #555;
           font-family: 'Helvetica Neue', sans-serif;
           font-size: 16px;
+          background: #eee;
           line-height: 1.4; }
 
         a  { color: #f05a28; }
@@ -18,7 +19,7 @@
         h1,h2,h3,h4,h5,h6 { color: #444; margin: 0 0 20px 0; }
 
         h1      { font-size: 40px; }
-        h2      { font-size: 32px; }
+        h2      { font-size: 32px; margin: 0 0 12px 0; }
         h3      { font-size: 24px; }
         h4      { font-size: 21px; }
         h5      { font-size: 18px; }
