--- a/sass/i.scss
+++ b/sass/i.scss
@@ -4,53 +4,48 @@
 
 /* Fretboard Container/Wrapper */
 
-        .fretboard_wrapper {
-            display: block;
-            position: relative;
-            width: #{$fretb_width / 2}px; // Needs to be an equal divisor of the fretboard width: half, quarter, etc
-            margin: 0 auto 32px;
-            background: #fff;
+        .container {
+          max-width: 320px;
+          margin: 0 auto;
+          background-color: #ddd;
         }
-        // Divide height by width, via http://ansciath.tumblr.com/post/7347495869/css-aspect-ratio
-        .v4  .fretboard_pillars { padding-top: percentage( $fretb_height_v4  / $fretb_width ); }
-        .v5  .fretboard_pillars { padding-top: percentage( $fretb_height_v5  / $fretb_width ); }
-        .v7  .fretboard_pillars { padding-top: percentage( $fretb_height_v7  / $fretb_width ); }
-        .v9  .fretboard_pillars { padding-top: percentage( $fretb_height_v9  / $fretb_width ); }
-        .v12 .fretboard_pillars { padding-top: percentage( $fretb_height_v12 / $fretb_width ); }
-        .v15 .fretboard_pillars { padding-top: percentage( $fretb_height_v15 / $fretb_width ); }
-
-        .fretboard_content {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
+        .svg_wrapper {
+        	position: relative;
+        	height: 0;
+          padding-top: 106.94444%;
         }
+        .svg_wrapper svg.fretboard_bg {
+          position: absolute;
+          top: 0; left: 0;
+        }
+        
+        .svg_wrapper .cells { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
+        .svg_wrapper .cell svg { width: 12.5%; height: 14.285714285%; float: left; display: block; }
 
 /* Fretboard BG */
         
-        /* Positioning */
-        .fretboard_svg {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-/* Fretboard Cell Sizing */
-        .cell { display: block; float: left; width: percentage( $cell_width / $fretb_width ); max-height: 100%; }
-        .v4 .cell  { height: percentage( $cell_height / $fretb_height_v4 ); }
-        .v5 .cell  { height: percentage( $cell_height / $fretb_height_v5 ); }
-        .v7 .cell  { height: percentage( $cell_height / $fretb_height_v7 ); }
-        .v9 .cell  { height: percentage( $cell_height / $fretb_height_v9 ); }
-        .v12 .cell { height: percentage( $cell_height / $fretb_height_v12 ); }
-        .v15 .cell { height: percentage( $cell_height / $fretb_height_v15 ); }
-
-/* Fretboard Element Styles */
-        .cell.dot .fretb_dot { fill: #27a9e1; }
-        .cell.empty          { /* no styles needed */ }
-        .fretboard_svg .fret_bg rect  { fill: #fff; }
-        .fretboard_svg .frets rect   { fill: #ddd; }
-        .fretboard_svg .nut rect     { fill: #6e6e6e; }
-        .fretboard_svg .strings rect { fill: #6e6e6e; }
+//        /* Positioning */
+//        .fretboard_svg {
+//            width: 100%;
+//            height: 100%;
+//            position: absolute;
+//            top: 0;
+//            left: 0;
+//        }
+//
+///* Fretboard Cell Sizing */
+//        .cell { display: block; float: left; width: percentage( $cell_width / $fretb_width ); max-height: 100%; }
+//        .v4 .cell  { height: percentage( $cell_height / $fretb_height_v4 ); }
+//        .v5 .cell  { height: percentage( $cell_height / $fretb_height_v5 ); }
+//        .v7 .cell  { height: percentage( $cell_height / $fretb_height_v7 ); }
+//        .v9 .cell  { height: percentage( $cell_height / $fretb_height_v9 ); }
+//        .v12 .cell { height: percentage( $cell_height / $fretb_height_v12 ); }
+//        .v15 .cell { height: percentage( $cell_height / $fretb_height_v15 ); }
+//
+///* Fretboard Element Styles */
+//        .cell.dot .fretb_dot { fill: #27a9e1; }
+//        .cell.empty          { /* no styles needed */ }
+//        .fretboard_svg .fret_bg rect  { fill: #fff; }
+//        .fretboard_svg .frets rect   { fill: #ddd; }
+//        .fretboard_svg .nut rect     { fill: #6e6e6e; }
+//        .fretboard_svg .strings rect { fill: #6e6e6e; }
