--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -20,7 +20,7 @@
 
         h1      { font-size: 40px; }
         h2      { font-size: 32px; margin: 0 0 12px 0; }
-        h3      { font-size: 24px; }
+        h3      { font-size: 24px; margin: 40px 0 10px 0; }
         h4      { font-size: 21px; }
         h5      { font-size: 18px; }
         h6      { font-size: 18px; }
