--- a/sass/i.scss
+++ b/sass/i.scss
@@ -21,7 +21,9 @@
         }
         
         .svg_wrapper .cells { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
-        .svg_wrapper .cell svg { width: 12.5%; height: 14.285714285%; float: left; display: block; }
+        .svg_wrapper .cell svg { width: 12.5%; float: left; display: block; }
+        .svg_wrapper.f5 .cell svg { height: 14.285714285%; }
+        .svg_wrapper.f4 .cell svg { height: 16.666666666%; }
 
 /* Fretboard BG */
         
