--- a/sass/i.scss
+++ b/sass/i.scss
@@ -5,7 +5,7 @@
 /* Fretboard Container/Wrapper */
 
         .container {
-          max-width: 320px;
+          width: 288px;
           margin: 0 auto;
         }
         .svg_wrapper {
