--- a/sass/i.scss
+++ b/sass/i.scss
@@ -13,12 +13,12 @@
         	position: relative;
         	height: 0;
         }
-        .svg_wrapper.v4  { padding-top: 91.666666666%; } /*  528/576 */
-        .svg_wrapper.v5  { padding-top: 106.94444%; }    /*  616/576 */
-        .svg_wrapper.v7  { padding-top: 137.5%; }        /*  792/576 */
-        .svg_wrapper.v9  { padding-top: 168.0555556%; }  /*  968/576 */
-        .svg_wrapper.v12 { padding-top: 213.8888889%; }  /* 1232/576 */
-        .svg_wrapper.v15 { padding-top: 259.7222222%; }  /* 1496/576 */
+        .svg_wrapper.v4  { padding-top: percentage( $fretb_height_v4  / $fretb_width ); }
+        .svg_wrapper.v5  { padding-top: percentage( $fretb_height_v5  / $fretb_width ); }
+        .svg_wrapper.v7  { padding-top: percentage( $fretb_height_v7  / $fretb_width ); }
+        .svg_wrapper.v9  { padding-top: percentage( $fretb_height_v9  / $fretb_width ); }
+        .svg_wrapper.v12 { padding-top: percentage( $fretb_height_v12 / $fretb_width ); }
+        .svg_wrapper.v15 { padding-top: percentage( $fretb_height_v15 / $fretb_width ); }
 
         .svg_wrapper svg.fretboard_bg {
           position: absolute;
@@ -26,38 +26,21 @@
         }
         
         .svg_wrapper .cells { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
-        .svg_wrapper .cell svg { width: 12.5%; float: left; display: block; }
+        .svg_wrapper .cell svg { width: percentage( $cell_width / $fretb_width ); float: left; display: block; }
 
-        .svg_wrapper.v4  .cell svg { height: 16.666666666%; }  /* 88/528 */
-        .svg_wrapper.v5  .cell svg { height: 14.285714285%; }  /* 88/616 */
-        .svg_wrapper.v7  .cell svg { height: 11.111111111%; }  /* 88/792 */
-        .svg_wrapper.v9  .cell svg { height:  9.09090909%; }   /* 88/968 */
-        .svg_wrapper.v12 .cell svg { height:  7.142857142%; }  /* 88/1232 */
-        .svg_wrapper.v15 .cell svg { height:  5.5882352941%; } /* 88/1496 */
+        .svg_wrapper.v4  .cell svg { height: percentage( $cell_height / $fretb_height_v4  ); }
+        .svg_wrapper.v5  .cell svg { height: percentage( $cell_height / $fretb_height_v5  ); }
+        .svg_wrapper.v7  .cell svg { height: percentage( $cell_height / $fretb_height_v7  ); }
+        .svg_wrapper.v9  .cell svg { height: percentage( $cell_height / $fretb_height_v9  ); }
+        .svg_wrapper.v12 .cell svg { height: percentage( $cell_height / $fretb_height_v12 ); }
+        .svg_wrapper.v15 .cell svg { height: percentage( $cell_height / $fretb_height_v15 ); }
 
 
 /* Fretboard Element Styles */
         .cell.dot .fretb_dot { fill: #27a9e1; }
-        .cell.empty          { /* no styles needed */ }
         .fretboard_bg .fret_bg rect  { fill: #fff; }
         .fretboard_bg .frets rect   { fill: #ddd; }
         .fretboard_bg .nut rect     { fill: #6e6e6e; }
         .fretboard_bg .strings rect { fill: #6e6e6e; }        
-
-//
-///* Fretboard Cell Sizing */
-//        .cell { display: block; float: left; width: percentage( $cell_width / $fretb_width ); max-height: 100%; }
-//        .v4 .cell  { height: percentage( $cell_height / $fretb_height_v4 ); }
-//        .v5 .cell  { height: percentage( $cell_height / $fretb_height_v5 ); }
-//        .v7 .cell  { height: percentage( $cell_height / $fretb_height_v7 ); }
-//        .v9 .cell  { height: percentage( $cell_height / $fretb_height_v9 ); }
-//        .v12 .cell { height: percentage( $cell_height / $fretb_height_v12 ); }
-//        .v15 .cell { height: percentage( $cell_height / $fretb_height_v15 ); }
-//
-///* Fretboard Element Styles */
-//        .cell.dot .fretb_dot { fill: #27a9e1; }
-//        .cell.empty          { /* no styles needed */ }
-//        .fretboard_svg .fret_bg rect  { fill: #fff; }
-//        .fretboard_svg .frets rect   { fill: #ddd; }
-//        .fretboard_svg .nut rect     { fill: #6e6e6e; }
-//        .fretboard_svg .strings rect { fill: #6e6e6e; }
+        
+        .svg_wrapper.noNut .fretboard_bg .nut rect { fill: none; }
