Eight is the magic number... or is it?

--- a/sass/i.scss
+++ b/sass/i.scss
@@ -8,6 +8,10 @@
           width: 288px;
           margin: 0 auto;
         }
+        .container_h {
+          width: 384px;
+          margin: 0 auto;
+        }
         .svg_wrapper {
           background-color: #fff;
         	position: relative;
