--- a/sass/i.scss
+++ b/sass/i.scss
@@ -9,7 +9,7 @@
           margin: 0 auto;
         }
         .container_h {
-          width: 288px;
+          max-width: 480px;
           margin: 0 auto;
         }
         .svg_wrapper {
