--- a/sass/i.scss
+++ b/sass/i.scss
@@ -24,9 +24,10 @@
         .svg_wrapper svg.fretboard_bg {
           position: absolute;
           top: 0; left: 0;
+          z-index: 0;
         }
 
-        .svg_wrapper .cells { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
+        .svg_wrapper .cells { width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 1; }
 
         // Verticals
         .svg_wrapper.v4  { padding-top: percentage( $fretb_height_v4  / $fretb_v_width ); }
